updated swagger finished last methods or validations
