# backend/src/main/java/de/nordakademie/iaa/library/controller/api/exception/PublicationIsNotBorrowableException.java
@@ -1,0 +1,10 @@
+package de.nordakademie.iaa.library.controller.api.exception;
+
+import org.springframework.http.HttpStatus;
+
+public class PublicationIsNotBorrowableException extends AbstractRestApiException {
+
+    public PublicationIsNotBorrowableException() {
+        super(HttpStatus.BAD_REQUEST, "All publications of this type are already borrowed or the publication does not exists.");
+    }
+}
